basic implementation of DAPA process for time-series
