# doc/openapi.yaml
@@ -2,16 +2,16 @@ openapi: 3.0.1
 info:
   contact:
     email: unity@jpl.nasa.gov
-  description: DAPA Process Mapper
+  description: Unity DAPA Process Mapper
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   termsOfService: https://unity.jpl.nasa.gov/terms/
-  title: DAPA Process Mapper
+  title: Unity DAPA Process Mapper
   version: 0.0.1
 servers:
   - description: Local development server
-    url: http://localhost:8080/process-mapper/v0/
+    url: http://localhost:8080/unity/v0/
 
 paths:
 
@@ -20,11 +20,11 @@ paths:
   # this would have openapi-generator create bad code
   # ref: https://github.com/OpenAPITools/openapi-generator/issues/3304
   #/RepresentationInformation/{id}:
-  /Collection/{collection_id}:
+  /collections/{collection_id}/processes:
     get:
-      summary: "Get processor list by collection id"
-      description: Get processor list by collection id
-      operationId: get_processor_list_by_id
+      summary: "List processes applicable to a collection specified by collection id"
+      description: Get processes for collection id
+      operationId: get_processes_for_collection_id
       parameters:
         - $ref: '#/components/parameters/CollectionId'
       responses:
@@ -32,7 +32,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Processors'
+                $ref: '#/components/schemas/Processes'
           description: Successfully return a list of processors
         404:
           content:
@@ -42,13 +42,15 @@ paths:
           description: processor not found
       x-openapi-router-controller: openapi_server.controllers.default_controller
 
-  /Collection/{collection_id}/timeSeries:
-    post:
-      summary: "Get time series by collection id"
-      description: Get time series by collection id
-      operationId: get_time_series by collection id
+  /collections/{collection_id}/processes/time-series:averaged-over-area:
+    get:
+      summary: "Get time series by spatial and temporal constraints for a collection specified by collection id"
+      description: Get time series for collection id
+      operationId: get_time_series_for_collection_id
       parameters:
         - $ref: '#/components/parameters/CollectionId'
+        - $ref: '#/components/parameters/BoundingBox'
+        - $ref: '#/components/parameters/TimeSpan'
       responses:
         200:
           content:
@@ -76,6 +78,24 @@ components:
         schema:
           $ref: '#/components/schemas/CollectionId'
         style: simple
+      BoundingBox:
+        description: bouding box
+        explode: false
+        in: query
+        name: bbox
+        required: true
+        schema:
+          $ref: '#/components/schemas/BoundingBox'
+        style: simple
+      TimeSpan:
+        description: start and end time
+        explode: false
+        in: query
+        name: timespan
+        required: true
+        schema:
+          $ref: '#/components/schemas/TimeSpan'
+        style: simple
 
   responses:
     400Error:
@@ -102,10 +122,22 @@ components:
     CollectionId:
       description: collection id
       type: string
-      pattern: ^(\w{8}\-\w{4}\-\w{4}\-\w{4}\-\w{12}\.){0,1}\w{8}\-\w{4}\-\w{4}\-\w{4}\-\w{12}$
-      example: 21608d3b-b597-4bd7-882e-f18e8b95b6d8
+      #pattern: ^(\w{8}\-\w{4}\-\w{4}\-\w{4}\-\w{12}\.){0,1}\w{8}\-\w{4}\-\w{4}\-\w{4}\-\w{12}$
+      example: MUR25-JPL-L4-GLOB-v4.2_analysed_sst
 
-    Processors:
+    BoundingBox:
+      description: bounding box
+      type: string
+      #pattern: ^(\w){3}(\w)$
+      example: 11.49,48.05,11.66,48.22
+
+    TimeSpan:
+      description: start/end time in iso format
+      type: string
+      #pattern: ^(\w){3}(\w)$
+      example: 2018-02-12T00:00:00Z/2018-03-18T12:31:12Z
+
+    Processes:
       type: array
       items:
         type: string
